Update footer copyright text

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-bottom">
-                <p>&copy; 2025 虚拟香港机场管理局 VAAHK. All Rights Reserved.</p>
+                <p>&copy; 2025 虚拟香港机场管理局 VAAHK</p>
             </div>
         </div>
     </footer>
